chatbot repeats after you

--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
   "author": "Juno",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.15.2",
     "body-parser": "^1.15.2",
     "ejs": "^2.5.2",
     "express": "^4.14.0"
