--- a/app/package.json
+++ b/app/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "app",
+  "name": "Scheduling Assistant",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Juno",
+  "author": "Juno Lee",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.15.2",
     "body-parser": "^1.15.2",
     "ejs": "^2.5.2",
-    "express": "^4.14.0",
-    "google-auth-library": "^0.9.9",
-    "googleapis": "^14.2.0"
+    "express": "^4.14.0"
   }
 }
